--- a/views/Galerie.ejs
+++ b/views/Galerie.ejs
@@ -1,6 +1,7 @@
 <% include partials/head %>
 
 <script src="/scripts/infiniteGalleries.js"></script>
+<script src="/scripts/cart.js"></script>
 <div class="container">
     <% if (locals.level && locals.level > 1) { %>
       <div class="alert alert-info" role="alert">
@@ -19,8 +20,9 @@
                   <h5 class="card-title"><i><a href="Galerie/<%= locals.galleries[index]._id %>"><%= locals.galleries[index].title %></a></i></h5>
                   <p class="card-text gallery-description"><%= locals.galleries[index].content %></p>
                   <p class="card-text"><b><%= locals.galleries[index].price %>€</b></p>
-                  <input type="submit" class="logbtn" value="Add to cart" onclick="addToCart('<%= locals.galleries[index]._id %>')">
-                  <a href="/api/cart/add-to-cart/<%= locals.galleries[index]._id %>">ADD</a>
+                  <input type="submit" class="logbtn" value="Add to cart" onclick="cartAdd('<%= locals.galleries[index]._id %>')">
+                  <a href="/api/cart/add/<%= locals.galleries[index]._id %>">ADD</a>
+                  <a href="/api/cart/del/<%= locals.galleries[index]._id %>">DEL</a>
                   <p class="card-text">
                     <% locals.galleries[index].tags.forEach(function (tag) { %>
                       <a href="#<%= tag %>">#<%= tag %></a>
@@ -40,14 +42,7 @@
   function expand(image){
     let expand = $("#expandImg");
     expand.src = image.src;
-    expand.attr("src", image.src)
-  }
-  async function addToCart(itemId) {
-    await fetch(`http://127.0.0.1:8089/api/cart/add-to-cart/${itemId}`)
-    .then(function(response) {
-      console.log(response)
-    })
-    return ;
+    expand.attr("src", image.src);
   }
 </script>
 <% include partials/footer %>
