cleaning up galleries and setting up shop

--- a/views/restricted/Shop-patch.ejs
+++ b/views/restricted/Shop-patch.ejs
@@ -4,19 +4,19 @@
 
 <div class="container">
     <div class="form-container gallery-form">
-        <form id="gallery" method="POST" action="/api/gallery/patch/<%= locals.gallery._id %>" enctype="multipart/form-data" onsubmit="patchGallery(event);"> 
-            <h1 class="form-title">Editer un item de la galerie</h1>
+        <form id="shop" method="POST" action="/api/shop/patch/<%= locals.shop._id %>" enctype="multipart/form-data" onsubmit="patchShop(event);"> 
+            <h1 class="form-title">Editer un item de la boutique</h1>
             <div class="txtb">
-                <input type="text" name="title" id="title" value="<%= locals.gallery.title %>" onkeyup="Validate.String(this, 1, 256);" required>
+                <input type="text" name="title" id="title" value="<%= locals.shop.title %>" onkeyup="Validate.String(this, 1, 256);" required>
                 <span data-placeholder="Title"></span>
                 <span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
             </div>
             
-            <textarea id="content" name="content" class="blog-textarea" placeholder="Your item description here" onkeyup="Validate.String(this, 1, 2048);" required><%= locals.gallery.content %></textarea>
+            <textarea id="content" name="content" class="blog-textarea" placeholder="Your item description here" onkeyup="Validate.String(this, 1, 2048);" required><%= locals.shop.content %></textarea>
             <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
 
             <div class="form-group">
-                <img src="/api/gallery/image/<%= locals.gallery._id %>"/>
+                <img src="/api/shop/image/<%= locals.shop._id %>"/>
                 <input type="file" name="img" id="img">
             </div>
         
@@ -25,17 +25,17 @@
                 <span data-placeholder="Tags"></span>
             </div>
 
-            <input type="submit" class="logbtn" value="Update" id="submit-gallery">
+            <input type="submit" class="logbtn" value="Update" id="submit-shop">
         </form>
     <hr />
-    <form method="GET" action="/api/gallery/delete/<%= locals.gallery._id %>">
+    <form method="GET" action="/api/shop/delete/<%= locals.shop._id %>">
         <input type="submit" class="delbtn" value="DELETE" id="delete-blog">
     </form>
 </div>
 
 <script>
     let tagInput = $("#tagInput");
-    let tags = "<%= locals.gallery.tags %>";
+    let tags = "<%= locals.shop.tags %>";
     tags = tags.split(',')
 
     tagInput.tagsinput('add', "");
@@ -44,7 +44,7 @@
     for (i = 0; i < tags.length; i++)
         tagInput.tagsinput('add', tags[i]);
        
-    async function patchGallery(e) {
+    async function patchShop(e) {
         e.preventDefault();
         let tagInput = document.getElementsByClassName("label-info"),
             title = $("#title").val(),
@@ -61,7 +61,7 @@
         formData.append('content', content);
         formData.append('tags', JSON.stringify(tags));
             
-        fetch('/api/gallery/patch/<%= locals.gallery._id %>', {
+        fetch('/api/shop/patch/<%= locals.shop._id %>', {
             method: 'post',
             mode: 'same-origin',
             body: formData
