--- a/views/restricted/Shop-post.ejs
+++ b/views/restricted/Shop-post.ejs
@@ -1,7 +1,5 @@
 <% include ../partials/head %>
 
-<script src="/scripts/bootstrap-tagsinput.js"></script>
-
 <div class="container"> 
     <div class="form-container gallery-form">
         <form id="shop" method="POST" action="/api/shop/post" enctype="multipart/form-data" onsubmit="postShop(event);">
@@ -19,17 +17,14 @@
             <div class="form-group">
                 <input type="file" name="img" id="img" required>
             </div>
+            
             <div class="form-group">
+                <label>price</label>
                 <input type="number" id="price" name="price">
             </div>
             <div class="form-group">
                 <label>check if this is an unique item</label>
                 <input type="checkbox" name="isUnique" id="isUnique">
-            </div>
-
-            <div class="form-group">
-                    <input v-bind="selectedTags" type="text" value="" data-role="tagsinput" id="tagInput" class="form-control">
-                    <span data-placeholder="Tags"></span>
             </div>
 
             <input type="submit" class="logbtn" value="Save" id="submit-shop">
@@ -39,20 +34,14 @@
     <script>
         async function postShop(e) {
             e.preventDefault();
-            let tagInput = document.getElementsByClassName("label-info"),
-                title = $("#title").val(),
+            let title = $("#title").val(),
                 content = $("#content").val(),
                 img = document.querySelector('#img'),
-                formData = new FormData(),
-                tags = [];
+                formData = new FormData();
             
-            for (i = 0; i < tagInput.length; i++)
-                tags.push(tagInput[i].textContent);
-
             formData.append('img', img.files[0]);
             formData.append('title', title);
             formData.append('content', content);
-            formData.append('tags', JSON.stringify(tags));
             
             fetch('/api/shop/post', {
                 method: 'post',
