--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -1,6 +1,14 @@
 <% include partials/head %>
 
-<div class="container-fluid"> 
+<div class="container-fluid">
+    <% if (locals.level && locals.level > 1) { %>
+        <div class="alert alert-info" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">×</span>
+            </button>
+            <a href="/Shop/Post">post shop item</a>
+        </div>
+    <% } %> 
     <div class="container">
             <h1>KEEP SHOP API AND FRONT FOR LATER</h1>
     </div>
