--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -16,21 +16,21 @@
         <button class="w3-bar-item w3-button" onclick="openTab('print')">Print</button>
         <div class="container-gallery" id="container-gallery">
             <div id="original" class="tab container-gallery">
-              <% if (locals.shopItems){ %>
-                <% Object.keys(locals.shopItems).forEach(function (index) { %>
-                  <% if (locals.shopItems[index].isUnique) { %>
-                  <div class="card" id="<%= locals.shopItems[index]._id %>">
-                    <a href="#expand"><img onclick="expand(this);" src="/api/shop/image/<%= locals.shopItems[index]._id %>" class="card-img-top" alt="<%= locals.shopItems[index].title %>"></a>
+              <% if (locals.original){ %>
+                <% Object.keys(locals.original).forEach(function (index) { %>
+                  <% if (locals.original[index].isUnique) { %>
+                  <div class="card" id="<%= locals.original[index]._id %>">
+                    <a href="#expand"><img onclick="expand(this);" src="/api/shop/image/<%= locals.original[index]._id %>" class="card-img-top" alt="<%= locals.original[index].title %>"></a>
                     <div class="card-body">
-                      <h5 class="card-title"><i><a href="Shop/<%= locals.shopItems[index]._id %>"><%= locals.shopItems[index].title %></a></i></h5>
-                      <p class="card-text gallery-description"><%= locals.shopItems[index].content %></p>
+                      <h5 class="card-title"><i><a href="Shop/<%= locals.original[index]._id %>"><%= locals.original[index].title %></a></i></h5>
+                      <p class="card-text gallery-description"><%= locals.original[index].content %></p>
                       <p class="card-text">
-                          <b><%= locals.shopItems[index].price %>€</b><br />
-                          <% if (locals.shopItems[index].isUnique) { %>
+                          <b><%= locals.original[index].price %>€</b><br />
+                          <% if (locals.original[index].isUnique) { %>
                               <b>Toile unique</b>
                           <% } %>
                       </p>
-                      <input type="submit" class="logbtn" value="Add to cart" onclick="cartAdd('<%= locals.shopItems[index]._id %>', this)">
+                      <input type="submit" class="logbtn" value="Add to cart" onclick="cartAdd('<%= locals.original[index]._id %>', this)">
                     </div>
                   </div>
                   <% } %>
@@ -38,21 +38,21 @@
               <% } %>
           </div>
           <div id="print" class="tab container-gallery" style="display:none">
-              <% if(locals.shopItems){ %>
-                <% Object.keys(locals.shopItems).forEach(function (index) { %>
-                  <% if (!locals.shopItems[index].isUnique) { %>
-                  <div class="card" id="<%= locals.shopItems[index]._id %>">
-                    <a href="#expand"><img onclick="expand(this);" src="/api/shop/image/<%= locals.shopItems[index]._id %>" class="card-img-top" alt="<%= locals.shopItems[index].title %>"></a>
+              <% if(locals.print){ %>
+                <% Object.keys(locals.print).forEach(function (index) { %>
+                  <% if (!locals.print[index].isUnique) { %>
+                  <div class="card" id="<%= locals.print[index]._id %>">
+                    <a href="#expand"><img onclick="expand(this);" src="/api/shop/image/<%= locals.print[index]._id %>" class="card-img-top" alt="<%= locals.print[index].title %>"></a>
                     <div class="card-body">
-                      <h5 class="card-title"><i><a href="Shop/<%= locals.shopItems[index]._id %>"><%= locals.shopItems[index].title %></a></i></h5>
-                      <p class="card-text gallery-description"><%= locals.shopItems[index].content %></p>
+                      <h5 class="card-title"><i><a href="Shop/<%= locals.print[index]._id %>"><%= locals.print[index].title %></a></i></h5>
+                      <p class="card-text gallery-description"><%= locals.print[index].content %></p>
                       <p class="card-text">
-                          <b><%= locals.shopItems[index].price %>€</b><br />
-                          <% if (locals.shopItems[index].isUnique) { %>
+                          <b><%= locals.print[index].price %>€</b><br />
+                          <% if (locals.print[index].isUnique) { %>
                               <b>Toile unique</b>
                           <% } %>
                       </p>
-                      <input type="submit" class="logbtn" value="Add to cart" onclick="cartAdd('<%= locals.shopItems[index]._id %>', this)">
+                      <input type="submit" class="logbtn" value="Add to cart" onclick="cartAdd('<%= locals.print[index]._id %>', this)">
                     </div>
                   </div>
                   <% } %>
@@ -86,6 +86,6 @@
 
 <a class="lightbox-close" href="#close">
   <div class="lightbox-target" id="expand">
-    <img id="expandImg" src="/api/shop/image/<%= locals.shopItems[0]._id %>"/>
+    <img id="expandImg" src="/api/shop/image/<%= locals.original[0]._id %>"/>
   </div>
 </a>
