adding name fields for delivery, added validation checks, revamped delivery info inputs

--- a/views/User.ejs
+++ b/views/User.ejs
@@ -1,13 +1,24 @@
 <% include partials/head %>
 
 <div class="container">
+  <div class="panel-heading">
+    <h2 class="panel-title">Delivery Informations</h2>
+    <h6>*Make sure the informations you enter are correct, we will be using them for delivery</h6>
+  </div>
   <div class="panel panel-primary">
-    <div class="panel-heading">
-      <h2 class="panel-title">Add your Address</h2>
-      <h6>*Make sure the informations you enter are correct, we will be using them for delivery</h6>
-    </div>
     <form id="deliveryform" method="POST" action="/api/user/patch/delivery-info">
+      <div class="row">
+        <div class="col-md-6">
+          <label class="control-label">Last Name</label>
+          <input type="tel" class="form-control" id="lastname" name="lastname" placeholder="Doe" required>
+        </div>
+        <div class="col-md-6">
+          <label class="control-label">First Name</label>
+          <input class="form-control" id="firstname" name="firstname" placeholder="John" required>
+        </div>
+      </div>
     <div class="panel-body">
+      <label class="control-label">Address</label>        
       <input id="autocomplete" name="fulltext_address" placeholder="Enter your address" onFocus="geolocate()" type="text" class="form-control" required>
       <div id="address">
         <div class="row">
@@ -23,21 +34,21 @@
         <div class="row">
           <div class="col-md-6">
             <label class="control-label">City</label>
-            <input class="form-control field" id="locality" name="city" required>
+            <input class="form-control field" id="locality" name="city" placeholder="Paris" required>
           </div>
           <div class="col-md-6"> 
             <label class="control-label">State</label>
-            <input class="form-control" id="administrative_area_level_1" name="state" required>
+            <input class="form-control" id="administrative_area_level_1" name="state" placeholder="Île-de-France" required>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <label class="control-label">Zip code</label>
-            <input class="form-control" id="postal_code" name="postal_code" required>
+            <input class="form-control" id="postal_code" name="postal_code" placeholder="75001" required>
           </div>
           <div class="col-md-6">
             <label class="control-label">Country</label>
-            <input class="form-control" id="country" name="country" required>
+            <input class="form-control" id="country" name="country" placeholder="France" required>
           </div>
         </div>
       </div>
